2012-04-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.php: fixed when the
	module have a spaces or other entities in the name when try to
	create a items with the wizzard.
	
	* godmode/reporting/visual_console_builder.wizard.php: changed the
	style of form to show more horizontality.
	
	Fixes: #3521724
	
	
	
	* include/functions_reporting.php: fixed the "Top-N".
	
	Fixes: #3521724
	
	* include/functions_agents.php: cleaned source code style.
	
	* operation/agentes/ver_agente.php: return more data in the ajax
	request for the modules.

2012-04-30  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/agentes/datos_agente.php: Fixed: bad layout in view data.

2012-04-30  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_server.php: Fixed broken link in server view.

2012-04-30  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/servers/modificar_server.php: Changed values of columns 'load',
	'modules' and 'lag'.

2012-04-28  Junichi Satoh  <junichi@rworks.jp>

	* godmode/setup/setup.php: Merged from trunk. Fixed SQL error with
	PostgreSQL.

2012-04-28  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_tags.php: Merged from trunk. Fixed SQL error
	with PostgreSQL.

2012-04-28  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/estado_agente.php: Merged from trunk. Fixed	SQL
	error with PostgreSQL.

2012-04-28  Junichi Satoh  <junichi@rworks.jp>

	* godmode/admin_access_logs.php, include/functions_graph.php: Fixed
	SQL error with PostgreSQL.

2012-04-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_manager.php: Changed images in info license modal 
	window.
	
	* images/license_key.png
	 images/lock_license.png: Added images for license modal windows.

2012-04-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* images/enterprise_version.png
	 images/online_help.png
	 images/error_login.png
	 images/documentation.png
	 images/support.png: Added images for login error and login help 