@@ -1,3 +1,8 @@
+2012-04-30  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* include/functions_filemanager.php: Fixed: Collection list
+	looks bad.
+
 2012-04-30 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/reporting/visual_console_builder.php: fixed when the
